syntax = "proto3";
package madeinblock.slashrefund.slashrefund;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/made-in-block/slash-refund/x/slashrefund/types";

// Msg defines the Msg service.
service Msg {
      rpc Deposit(MsgDeposit) returns (MsgDepositResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgDeposit {
  string creator = 1;
  string validator_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  cosmos.base.v1beta1.Coin amount = 3 [(gogoproto.nullable) = false];
}

message MsgDepositResponse {
}

// this line is used by starport scaffolding # proto/tx/message
